--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.luizgadao.cadastroaluno.app.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,24 +17,25 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".FormAddActivity"
+            android:name="com.luizgadao.cadastroaluno.app.FormAddActivity"
             android:label="@string/title_activity_form_add"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.luizgadao.cadastroaluno.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
-        <activity android:name=".TestsActivity"
+        <activity
+            android:name=".TestsActivity"
             android:label="@string/title_activity_tests"
-            android:parentActivityName=".MainActivity">
-
+            android:parentActivityName="com.luizgadao.cadastroaluno.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
-
         </activity>
 
-        <receiver android:name=".receiver.SmsReceiver" android:enabled="true">
+        <receiver
+            android:name="com.luizgadao.cadastroaluno.app.receiver.SmsReceiver"
+            android:enabled="true" >
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
@@ -46,6 +47,7 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <!--<uses-feature android:name="android.hardware.camera" android:required="true" />-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- <uses-feature android:name="android.hardware.camera" android:required="true" /> -->
+
 </manifest>
